"removing mostly null columns"

--- a/test.ipynb
+++ b/test.ipynb
@@ -502,6 +502,137 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ResponseId', 'Q120', 'MainBranch', 'Age', 'Employment', 'RemoteWork',\n",
+       "       'CodingActivities', 'EdLevel', 'LearnCode', 'LearnCodeOnline',\n",
+       "       'LearnCodeCoursesCert', 'YearsCode', 'YearsCodePro', 'DevType',\n",
+       "       'OrgSize', 'PurchaseInfluence', 'TechList', 'BuyNewTool', 'Country',\n",
+       "       'Currency', 'CompTotal', 'LanguageHaveWorkedWith',\n",
+       "       'LanguageWantToWorkWith', 'DatabaseHaveWorkedWith',\n",
+       "       'DatabaseWantToWorkWith', 'PlatformHaveWorkedWith',\n",
+       "       'PlatformWantToWorkWith', 'WebframeHaveWorkedWith',\n",
+       "       'WebframeWantToWorkWith', 'MiscTechHaveWorkedWith',\n",
+       "       'MiscTechWantToWorkWith', 'ToolsTechHaveWorkedWith',\n",
+       "       'ToolsTechWantToWorkWith', 'NEWCollabToolsHaveWorkedWith',\n",
+       "       'NEWCollabToolsWantToWorkWith', 'OpSysPersonal use',\n",
+       "       'OpSysProfessional use', 'OfficeStackAsyncHaveWorkedWith',\n",
+       "       'OfficeStackAsyncWantToWorkWith', 'OfficeStackSyncHaveWorkedWith',\n",
+       "       'OfficeStackSyncWantToWorkWith', 'AISearchHaveWorkedWith',\n",
+       "       'AISearchWantToWorkWith', 'AIDevHaveWorkedWith', 'AIDevWantToWorkWith',\n",
+       "       'NEWSOSites', 'SOVisitFreq', 'SOAccount', 'SOPartFreq', 'SOComm',\n",
+       "       'SOAI', 'AISelect', 'AISent', 'AIAcc', 'AIBen',\n",
+       "       'AIToolInterested in Using', 'AIToolCurrently Using',\n",
+       "       'AIToolNot interested in Using', 'AINextVery different',\n",
+       "       'AINextNeither different nor similar', 'AINextSomewhat similar',\n",
+       "       'AINextVery similar', 'AINextSomewhat different', 'TBranch', 'ICorPM',\n",
+       "       'WorkExp', 'Knowledge_1', 'Knowledge_2', 'Knowledge_3', 'Knowledge_4',\n",
+       "       'Knowledge_5', 'Knowledge_6', 'Knowledge_7', 'Knowledge_8',\n",
+       "       'Frequency_1', 'Frequency_2', 'Frequency_3', 'TimeSearching',\n",
+       "       'TimeAnswering', 'ProfessionalTech', 'Industry', 'SurveyLength',\n",
+       "       'SurveyEase', 'ConvertedCompYearly'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ResponseId', 'MainBranch', 'Age', 'Employment', 'RemoteWork',\n",
+       "       'CodingActivities', 'EdLevel', 'LearnCode', 'LearnCodeOnline',\n",
+       "       'LearnCodeCoursesCert', 'YearsCode', 'YearsCodePro', 'DevType',\n",
+       "       'OrgSize', 'PurchaseInfluence', 'TechList', 'BuyNewTool', 'Country',\n",
+       "       'Currency', 'CompTotal', 'LanguageHaveWorkedWith',\n",
+       "       'LanguageWantToWorkWith', 'DatabaseHaveWorkedWith',\n",
+       "       'DatabaseWantToWorkWith', 'PlatformHaveWorkedWith',\n",
+       "       'PlatformWantToWorkWith', 'WebframeHaveWorkedWith',\n",
+       "       'WebframeWantToWorkWith', 'MiscTechHaveWorkedWith',\n",
+       "       'MiscTechWantToWorkWith', 'ToolsTechHaveWorkedWith',\n",
+       "       'ToolsTechWantToWorkWith', 'NEWCollabToolsHaveWorkedWith',\n",
+       "       'NEWCollabToolsWantToWorkWith', 'OpSysPersonal use',\n",
+       "       'OpSysProfessional use', 'OfficeStackAsyncHaveWorkedWith',\n",
+       "       'OfficeStackAsyncWantToWorkWith', 'OfficeStackSyncHaveWorkedWith',\n",
+       "       'OfficeStackSyncWantToWorkWith', 'AISearchHaveWorkedWith',\n",
+       "       'AISearchWantToWorkWith', 'AIDevHaveWorkedWith', 'AIDevWantToWorkWith',\n",
+       "       'NEWSOSites', 'SOVisitFreq', 'SOAccount', 'SOPartFreq', 'SOComm',\n",
+       "       'SOAI', 'AISelect', 'AISent', 'AIAcc', 'AIBen',\n",
+       "       'AIToolInterested in Using', 'AIToolCurrently Using',\n",
+       "       'AIToolNot interested in Using', 'AINextVery different',\n",
+       "       'AINextNeither different nor similar', 'AINextSomewhat similar',\n",
+       "       'AINextVery similar', 'AINextSomewhat different', 'TBranch', 'ICorPM',\n",
+       "       'WorkExp', 'Knowledge_1', 'Knowledge_2', 'Knowledge_3', 'Knowledge_4',\n",
+       "       'Knowledge_5', 'Knowledge_6', 'Knowledge_7', 'Knowledge_8',\n",
+       "       'Frequency_1', 'Frequency_2', 'Frequency_3', 'TimeSearching',\n",
+       "       'TimeAnswering', 'ProfessionalTech', 'Industry', 'ConvertedCompYearly'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df = df.drop(columns=['Q120','SurveyLength','SurveyEase'])\n",
+    "new_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dat_f = new_df.loc[:, ((new_df.isnull().sum() / new_df.shape[0]) * 100) >= 70]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIDevHaveWorkedWith                    70.954431\n",
+       "AIDevWantToWorkWith                    78.037540\n",
+       "AIToolNot interested in Using          76.375807\n",
+       "AINextVery different                   85.803507\n",
+       "AINextNeither different nor similar    92.600691\n",
+       "AINextSomewhat similar                 93.005472\n",
+       "AINextVery similar                     97.061132\n",
+       "AINextSomewhat different               73.870874\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dat_f.isnull().sum() / new_df.shape[0] * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
