--- a/test.ipynb
+++ b/test.ipynb
@@ -596,16 +596,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dat_f = new_df.loc[:, ((new_df.isnull().sum() / new_df.shape[0]) * 100) >= 70]"
+    "null_df = new_df.loc[:, ((new_df.isnull().sum() / new_df.shape[0]) * 100) >= 70]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -622,13 +622,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dat_f.isnull().sum() / new_df.shape[0] * 100"
+    "null_df.isnull().sum() / new_df.shape[0] * 100"
    ]
   },
   {
@@ -636,7 +636,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "work_df = new_df.drop(columns=)"
+   ]
   }
  ],
  "metadata": {
