"making a new work dataframe"

--- a/test.ipynb
+++ b/test.ipynb
@@ -633,12 +633,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "73"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "work_df = new_df.drop(columns=null_df.columns)\n",
+    "work_df.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 89184 entries, 0 to 89183\n",
+      "Data columns (total 73 columns):\n",
+      " #   Column                          Non-Null Count  Dtype  \n",
+      "---  ------                          --------------  -----  \n",
+      " 0   ResponseId                      89184 non-null  int64  \n",
+      " 1   MainBranch                      89184 non-null  object \n",
+      " 2   Age                             89184 non-null  object \n",
+      " 3   Employment                      87898 non-null  object \n",
+      " 4   RemoteWork                      73810 non-null  object \n",
+      " 5   CodingActivities                73764 non-null  object \n",
+      " 6   EdLevel                         87973 non-null  object \n",
+      " 7   LearnCode                       87663 non-null  object \n",
+      " 8   LearnCodeOnline                 70084 non-null  object \n",
+      " 9   LearnCodeCoursesCert            37076 non-null  object \n",
+      " 10  YearsCode                       87435 non-null  object \n",
+      " 11  YearsCodePro                    66136 non-null  object \n",
+      " 12  DevType                         76872 non-null  object \n",
+      " 13  OrgSize                         65043 non-null  object \n",
+      " 14  PurchaseInfluence               64964 non-null  object \n",
+      " 15  TechList                        60851 non-null  object \n",
+      " 16  BuyNewTool                      83009 non-null  object \n",
+      " 17  Country                         87973 non-null  object \n",
+      " 18  Currency                        65334 non-null  object \n",
+      " 19  CompTotal                       48225 non-null  float64\n",
+      " 20  LanguageHaveWorkedWith          87140 non-null  object \n",
+      " 21  LanguageWantToWorkWith          80709 non-null  object \n",
+      " 22  DatabaseHaveWorkedWith          73435 non-null  object \n",
+      " 23  DatabaseWantToWorkWith          60911 non-null  object \n",
+      " 24  PlatformHaveWorkedWith          63628 non-null  object \n",
+      " 25  PlatformWantToWorkWith          51308 non-null  object \n",
+      " 26  WebframeHaveWorkedWith          66938 non-null  object \n",
+      " 27  WebframeWantToWorkWith          56741 non-null  object \n",
+      " 28  MiscTechHaveWorkedWith          57019 non-null  object \n",
+      " 29  MiscTechWantToWorkWith          46848 non-null  object \n",
+      " 30  ToolsTechHaveWorkedWith         77884 non-null  object \n",
+      " 31  ToolsTechWantToWorkWith         68315 non-null  object \n",
+      " 32  NEWCollabToolsHaveWorkedWith    85864 non-null  object \n",
+      " 33  NEWCollabToolsWantToWorkWith    76649 non-null  object \n",
+      " 34  OpSysPersonal use               86557 non-null  object \n",
+      " 35  OpSysProfessional use           78587 non-null  object \n",
+      " 36  OfficeStackAsyncHaveWorkedWith  69090 non-null  object \n",
+      " 37  OfficeStackAsyncWantToWorkWith  53743 non-null  object \n",
+      " 38  OfficeStackSyncHaveWorkedWith   83439 non-null  object \n",
+      " 39  OfficeStackSyncWantToWorkWith   69776 non-null  object \n",
+      " 40  AISearchHaveWorkedWith          56328 non-null  object \n",
+      " 41  AISearchWantToWorkWith          46150 non-null  object \n",
+      " 42  NEWSOSites                      87973 non-null  object \n",
+      " 43  SOVisitFreq                     87140 non-null  object \n",
+      " 44  SOAccount                       87852 non-null  object \n",
+      " 45  SOPartFreq                      66061 non-null  object \n",
+      " 46  SOComm                          87692 non-null  object \n",
+      " 47  SOAI                            47858 non-null  object \n",
+      " 48  AISelect                        87973 non-null  object \n",
+      " 49  AISent                          61501 non-null  object \n",
+      " 50  AIAcc                           38594 non-null  object \n",
+      " 51  AIBen                           61396 non-null  object \n",
+      " 52  AIToolInterested in Using       32783 non-null  object \n",
+      " 53  AIToolCurrently Using           36137 non-null  object \n",
+      " 54  TBranch                         65768 non-null  object \n",
+      " 55  ICorPM                          43668 non-null  object \n",
+      " 56  WorkExp                         43579 non-null  float64\n",
+      " 57  Knowledge_1                     42535 non-null  object \n",
+      " 58  Knowledge_2                     41670 non-null  object \n",
+      " 59  Knowledge_3                     41798 non-null  object \n",
+      " 60  Knowledge_4                     41684 non-null  object \n",
+      " 61  Knowledge_5                     41527 non-null  object \n",
+      " 62  Knowledge_6                     41520 non-null  object \n",
+      " 63  Knowledge_7                     41467 non-null  object \n",
+      " 64  Knowledge_8                     41404 non-null  object \n",
+      " 65  Frequency_1                     41916 non-null  object \n",
+      " 66  Frequency_2                     41925 non-null  object \n",
+      " 67  Frequency_3                     41054 non-null  object \n",
+      " 68  TimeSearching                   42778 non-null  object \n",
+      " 69  TimeAnswering                   42629 non-null  object \n",
+      " 70  ProfessionalTech                41783 non-null  object \n",
+      " 71  Industry                        36774 non-null  object \n",
+      " 72  ConvertedCompYearly             48019 non-null  float64\n",
+      "dtypes: float64(3), int64(1), object(69)\n",
+      "memory usage: 49.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "work_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "work_df = new_df.drop(columns=)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
