"Context of data"

--- a/test.ipynb
+++ b/test.ipynb
@@ -4795,6 +4795,239 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseId': 0.0,\n",
+       " 'MainBranch': 0.0,\n",
+       " 'Age': 0.0,\n",
+       " 'Employment': 1.441962683889487,\n",
+       " 'RemoteWork': 17.238518119842126,\n",
+       " 'CodingActivities': 17.29009687836383,\n",
+       " 'EdLevel': 1.3578668819519195,\n",
+       " 'LearnCode': 1.7054628632938644,\n",
+       " 'LearnCodeOnline': 21.416397560100467,\n",
+       " 'LearnCodeCoursesCert': 58.427520631503405,\n",
+       " 'YearsCode': 1.961114101184069,\n",
+       " 'YearsCodePro': 25.843200574094006,\n",
+       " 'DevType': 13.805166846071042,\n",
+       " 'OrgSize': 27.068756727664155,\n",
+       " 'PurchaseInfluence': 27.157337639038392,\n",
+       " 'TechList': 31.769151417294584,\n",
+       " 'BuyNewTool': 6.923887692859705,\n",
+       " 'Country': 1.3578668819519195,\n",
+       " 'Currency': 26.742465016146394,\n",
+       " 'CompTotal': 45.926399354144245,\n",
+       " 'LanguageHaveWorkedWith': 2.2918909221385,\n",
+       " 'LanguageWantToWorkWith': 9.502825618945101,\n",
+       " 'DatabaseHaveWorkedWith': 17.65899712952996,\n",
+       " 'DatabaseWantToWorkWith': 31.701874775744525,\n",
+       " 'PlatformHaveWorkedWith': 28.655364190886257,\n",
+       " 'PlatformWantToWorkWith': 42.46950125583064,\n",
+       " 'WebframeHaveWorkedWith': 24.94393613204162,\n",
+       " 'WebframeWantToWorkWith': 36.37760136347327,\n",
+       " 'MiscTechHaveWorkedWith': 36.06588625762468,\n",
+       " 'MiscTechWantToWorkWith': 47.470398277717976,\n",
+       " 'ToolsTechHaveWorkedWith': 12.67043415859347,\n",
+       " 'ToolsTechWantToWorkWith': 23.399937208467886,\n",
+       " 'NEWCollabToolsHaveWorkedWith': 3.7226408324363116,\n",
+       " 'NEWCollabToolsWantToWorkWith': 14.05521169716541,\n",
+       " 'OpSysPersonal use': 2.94559562253319,\n",
+       " 'OpSysProfessional use': 11.882176175098673,\n",
+       " 'OfficeStackAsyncHaveWorkedWith': 22.530947255113023,\n",
+       " 'OfficeStackAsyncWantToWorkWith': 39.739190886257624,\n",
+       " 'OfficeStackSyncHaveWorkedWith': 6.441738428417654,\n",
+       " 'OfficeStackSyncWantToWorkWith': 21.761750986724078,\n",
+       " 'AISearchHaveWorkedWith': 36.84068891280947,\n",
+       " 'AISearchWantToWorkWith': 48.25304987441694,\n",
+       " 'NEWSOSites': 1.3578668819519195,\n",
+       " 'SOVisitFreq': 2.2918909221385,\n",
+       " 'SOAccount': 1.4935414424111948,\n",
+       " 'SOPartFreq': 25.927296376031578,\n",
+       " 'SOComm': 1.672945819878005,\n",
+       " 'SOAI': 46.33790814495874,\n",
+       " 'AISelect': 1.3578668819519195,\n",
+       " 'AISent': 31.040321133835665,\n",
+       " 'AIAcc': 56.72542160028705,\n",
+       " 'AIBen': 31.158055256548263,\n",
+       " 'AIToolInterested in Using': 63.24116433440976,\n",
+       " 'AIToolCurrently Using': 59.48040007176175,\n",
+       " 'TBranch': 26.255830642267668,\n",
+       " 'ICorPM': 51.03606027987083,\n",
+       " 'WorkExp': 51.13585396483674,\n",
+       " 'Knowledge_1': 52.306467527807676,\n",
+       " 'Knowledge_2': 53.27637244348762,\n",
+       " 'Knowledge_3': 53.132848941514176,\n",
+       " 'Knowledge_4': 53.26067456045928,\n",
+       " 'Knowledge_5': 53.436715105848585,\n",
+       " 'Knowledge_6': 53.44456404736275,\n",
+       " 'Knowledge_7': 53.503991747398636,\n",
+       " 'Knowledge_8': 53.5746322210262,\n",
+       " 'Frequency_1': 53.0005382131324,\n",
+       " 'Frequency_2': 52.990446716899896,\n",
+       " 'Frequency_3': 53.967079296734845,\n",
+       " 'TimeSearching': 52.033997129529965,\n",
+       " 'TimeAnswering': 52.20106745604593,\n",
+       " 'ProfessionalTech': 53.14966810190168,\n",
+       " 'Industry': 58.76614639397201,\n",
+       " 'ConvertedCompYearly': 46.15738249013276}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mp = {}\n",
+    "for x in work_df.columns:\n",
+    "    mp[x] = (work_df[x].isnull().sum() / work_df.shape[0]) * 100\n",
+    "mp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Different columns in data\n",
+      " Index(['ResponseId', 'MainBranch', 'Age', 'Employment', 'RemoteWork',\n",
+      "       'CodingActivities', 'EdLevel', 'LearnCode', 'LearnCodeOnline',\n",
+      "       'LearnCodeCoursesCert', 'YearsCode', 'YearsCodePro', 'DevType',\n",
+      "       'OrgSize', 'PurchaseInfluence', 'TechList', 'BuyNewTool', 'Country',\n",
+      "       'Currency', 'CompTotal', 'LanguageHaveWorkedWith',\n",
+      "       'LanguageWantToWorkWith', 'DatabaseHaveWorkedWith',\n",
+      "       'DatabaseWantToWorkWith', 'PlatformHaveWorkedWith',\n",
+      "       'PlatformWantToWorkWith', 'WebframeHaveWorkedWith',\n",
+      "       'WebframeWantToWorkWith', 'MiscTechHaveWorkedWith',\n",
+      "       'MiscTechWantToWorkWith', 'ToolsTechHaveWorkedWith',\n",
+      "       'ToolsTechWantToWorkWith', 'NEWCollabToolsHaveWorkedWith',\n",
+      "       'NEWCollabToolsWantToWorkWith', 'OpSysPersonal use',\n",
+      "       'OpSysProfessional use', 'OfficeStackAsyncHaveWorkedWith',\n",
+      "       'OfficeStackAsyncWantToWorkWith', 'OfficeStackSyncHaveWorkedWith',\n",
+      "       'OfficeStackSyncWantToWorkWith', 'AISearchHaveWorkedWith',\n",
+      "       'AISearchWantToWorkWith', 'NEWSOSites', 'SOVisitFreq', 'SOAccount',\n",
+      "       'SOPartFreq', 'SOComm', 'SOAI', 'AISelect', 'AISent', 'AIAcc', 'AIBen',\n",
+      "       'AIToolInterested in Using', 'AIToolCurrently Using', 'TBranch',\n",
+      "       'ICorPM', 'WorkExp', 'Knowledge_1', 'Knowledge_2', 'Knowledge_3',\n",
+      "       'Knowledge_4', 'Knowledge_5', 'Knowledge_6', 'Knowledge_7',\n",
+      "       'Knowledge_8', 'Frequency_1', 'Frequency_2', 'Frequency_3',\n",
+      "       'TimeSearching', 'TimeAnswering', 'ProfessionalTech', 'Industry',\n",
+      "       'ConvertedCompYearly'],\n",
+      "      dtype='object')\n",
+      "\n",
+      "\n",
+      "Each column null values\n",
+      " {'ResponseId': 0.0, 'MainBranch': 0.0, 'Age': 0.0, 'Employment': 1.441962683889487, 'RemoteWork': 17.238518119842126, 'CodingActivities': 17.29009687836383, 'EdLevel': 1.3578668819519195, 'LearnCode': 1.7054628632938644, 'LearnCodeOnline': 21.416397560100467, 'LearnCodeCoursesCert': 58.427520631503405, 'YearsCode': 1.961114101184069, 'YearsCodePro': 25.843200574094006, 'DevType': 13.805166846071042, 'OrgSize': 27.068756727664155, 'PurchaseInfluence': 27.157337639038392, 'TechList': 31.769151417294584, 'BuyNewTool': 6.923887692859705, 'Country': 1.3578668819519195, 'Currency': 26.742465016146394, 'CompTotal': 45.926399354144245, 'LanguageHaveWorkedWith': 2.2918909221385, 'LanguageWantToWorkWith': 9.502825618945101, 'DatabaseHaveWorkedWith': 17.65899712952996, 'DatabaseWantToWorkWith': 31.701874775744525, 'PlatformHaveWorkedWith': 28.655364190886257, 'PlatformWantToWorkWith': 42.46950125583064, 'WebframeHaveWorkedWith': 24.94393613204162, 'WebframeWantToWorkWith': 36.37760136347327, 'MiscTechHaveWorkedWith': 36.06588625762468, 'MiscTechWantToWorkWith': 47.470398277717976, 'ToolsTechHaveWorkedWith': 12.67043415859347, 'ToolsTechWantToWorkWith': 23.399937208467886, 'NEWCollabToolsHaveWorkedWith': 3.7226408324363116, 'NEWCollabToolsWantToWorkWith': 14.05521169716541, 'OpSysPersonal use': 2.94559562253319, 'OpSysProfessional use': 11.882176175098673, 'OfficeStackAsyncHaveWorkedWith': 22.530947255113023, 'OfficeStackAsyncWantToWorkWith': 39.739190886257624, 'OfficeStackSyncHaveWorkedWith': 6.441738428417654, 'OfficeStackSyncWantToWorkWith': 21.761750986724078, 'AISearchHaveWorkedWith': 36.84068891280947, 'AISearchWantToWorkWith': 48.25304987441694, 'NEWSOSites': 1.3578668819519195, 'SOVisitFreq': 2.2918909221385, 'SOAccount': 1.4935414424111948, 'SOPartFreq': 25.927296376031578, 'SOComm': 1.672945819878005, 'SOAI': 46.33790814495874, 'AISelect': 1.3578668819519195, 'AISent': 31.040321133835665, 'AIAcc': 56.72542160028705, 'AIBen': 31.158055256548263, 'AIToolInterested in Using': 63.24116433440976, 'AIToolCurrently Using': 59.48040007176175, 'TBranch': 26.255830642267668, 'ICorPM': 51.03606027987083, 'WorkExp': 51.13585396483674, 'Knowledge_1': 52.306467527807676, 'Knowledge_2': 53.27637244348762, 'Knowledge_3': 53.132848941514176, 'Knowledge_4': 53.26067456045928, 'Knowledge_5': 53.436715105848585, 'Knowledge_6': 53.44456404736275, 'Knowledge_7': 53.503991747398636, 'Knowledge_8': 53.5746322210262, 'Frequency_1': 53.0005382131324, 'Frequency_2': 52.990446716899896, 'Frequency_3': 53.967079296734845, 'TimeSearching': 52.033997129529965, 'TimeAnswering': 52.20106745604593, 'ProfessionalTech': 53.14966810190168, 'Industry': 58.76614639397201, 'ConvertedCompYearly': 46.15738249013276}\n",
+      "\n",
+      "\n",
+      "Average null value percentage in data \n",
+      " 29.41821679421581\n",
+      "\n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 89184 entries, 0 to 89183\n",
+      "Data columns (total 73 columns):\n",
+      " #   Column                          Non-Null Count  Dtype  \n",
+      "---  ------                          --------------  -----  \n",
+      " 0   ResponseId                      89184 non-null  int64  \n",
+      " 1   MainBranch                      89184 non-null  object \n",
+      " 2   Age                             89184 non-null  object \n",
+      " 3   Employment                      87898 non-null  object \n",
+      " 4   RemoteWork                      73810 non-null  object \n",
+      " 5   CodingActivities                73764 non-null  object \n",
+      " 6   EdLevel                         87973 non-null  object \n",
+      " 7   LearnCode                       87663 non-null  object \n",
+      " 8   LearnCodeOnline                 70084 non-null  object \n",
+      " 9   LearnCodeCoursesCert            37076 non-null  object \n",
+      " 10  YearsCode                       87435 non-null  object \n",
+      " 11  YearsCodePro                    66136 non-null  object \n",
+      " 12  DevType                         76872 non-null  object \n",
+      " 13  OrgSize                         65043 non-null  object \n",
+      " 14  PurchaseInfluence               64964 non-null  object \n",
+      " 15  TechList                        60851 non-null  object \n",
+      " 16  BuyNewTool                      83009 non-null  object \n",
+      " 17  Country                         87973 non-null  object \n",
+      " 18  Currency                        65334 non-null  object \n",
+      " 19  CompTotal                       48225 non-null  float64\n",
+      " 20  LanguageHaveWorkedWith          87140 non-null  object \n",
+      " 21  LanguageWantToWorkWith          80709 non-null  object \n",
+      " 22  DatabaseHaveWorkedWith          73435 non-null  object \n",
+      " 23  DatabaseWantToWorkWith          60911 non-null  object \n",
+      " 24  PlatformHaveWorkedWith          63628 non-null  object \n",
+      " 25  PlatformWantToWorkWith          51308 non-null  object \n",
+      " 26  WebframeHaveWorkedWith          66938 non-null  object \n",
+      " 27  WebframeWantToWorkWith          56741 non-null  object \n",
+      " 28  MiscTechHaveWorkedWith          57019 non-null  object \n",
+      " 29  MiscTechWantToWorkWith          46848 non-null  object \n",
+      " 30  ToolsTechHaveWorkedWith         77884 non-null  object \n",
+      " 31  ToolsTechWantToWorkWith         68315 non-null  object \n",
+      " 32  NEWCollabToolsHaveWorkedWith    85864 non-null  object \n",
+      " 33  NEWCollabToolsWantToWorkWith    76649 non-null  object \n",
+      " 34  OpSysPersonal use               86557 non-null  object \n",
+      " 35  OpSysProfessional use           78587 non-null  object \n",
+      " 36  OfficeStackAsyncHaveWorkedWith  69090 non-null  object \n",
+      " 37  OfficeStackAsyncWantToWorkWith  53743 non-null  object \n",
+      " 38  OfficeStackSyncHaveWorkedWith   83439 non-null  object \n",
+      " 39  OfficeStackSyncWantToWorkWith   69776 non-null  object \n",
+      " 40  AISearchHaveWorkedWith          56328 non-null  object \n",
+      " 41  AISearchWantToWorkWith          46150 non-null  object \n",
+      " 42  NEWSOSites                      87973 non-null  object \n",
+      " 43  SOVisitFreq                     87140 non-null  object \n",
+      " 44  SOAccount                       87852 non-null  object \n",
+      " 45  SOPartFreq                      66061 non-null  object \n",
+      " 46  SOComm                          87692 non-null  object \n",
+      " 47  SOAI                            47858 non-null  object \n",
+      " 48  AISelect                        87973 non-null  object \n",
+      " 49  AISent                          61501 non-null  object \n",
+      " 50  AIAcc                           38594 non-null  object \n",
+      " 51  AIBen                           61396 non-null  object \n",
+      " 52  AIToolInterested in Using       32783 non-null  object \n",
+      " 53  AIToolCurrently Using           36137 non-null  object \n",
+      " 54  TBranch                         65768 non-null  object \n",
+      " 55  ICorPM                          43668 non-null  object \n",
+      " 56  WorkExp                         43579 non-null  float64\n",
+      " 57  Knowledge_1                     42535 non-null  object \n",
+      " 58  Knowledge_2                     41670 non-null  object \n",
+      " 59  Knowledge_3                     41798 non-null  object \n",
+      " 60  Knowledge_4                     41684 non-null  object \n",
+      " 61  Knowledge_5                     41527 non-null  object \n",
+      " 62  Knowledge_6                     41520 non-null  object \n",
+      " 63  Knowledge_7                     41467 non-null  object \n",
+      " 64  Knowledge_8                     41404 non-null  object \n",
+      " 65  Frequency_1                     41916 non-null  object \n",
+      " 66  Frequency_2                     41925 non-null  object \n",
+      " 67  Frequency_3                     41054 non-null  object \n",
+      " 68  TimeSearching                   42778 non-null  object \n",
+      " 69  TimeAnswering                   42629 non-null  object \n",
+      " 70  ProfessionalTech                41783 non-null  object \n",
+      " 71  Industry                        36774 non-null  object \n",
+      " 72  ConvertedCompYearly             48019 non-null  float64\n",
+      "dtypes: float64(3), int64(1), object(69)\n",
+      "memory usage: 49.7+ MB\n",
+      "Data Info\n",
+      " None\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Different columns in data\\n {work_df.columns}\\n\\n\")\n",
+    "print(f\"Each column null values\\n {mp}\\n\\n\")\n",
+    "print(f\"Average null value percentage in data \\n {average_percentage_null}\\n\\n\")\n",
+    "print(f\"Data Info\\n {work_df.info()}\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
