--- a/test.ipynb
+++ b/test.ipynb
@@ -4890,7 +4890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4923,15 +4923,209 @@
       "       'ConvertedCompYearly'],\n",
       "      dtype='object')\n",
       "\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Different columns in data\\n {work_df.columns}\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Each column null values\n",
-      " {'ResponseId': 0.0, 'MainBranch': 0.0, 'Age': 0.0, 'Employment': 1.441962683889487, 'RemoteWork': 17.238518119842126, 'CodingActivities': 17.29009687836383, 'EdLevel': 1.3578668819519195, 'LearnCode': 1.7054628632938644, 'LearnCodeOnline': 21.416397560100467, 'LearnCodeCoursesCert': 58.427520631503405, 'YearsCode': 1.961114101184069, 'YearsCodePro': 25.843200574094006, 'DevType': 13.805166846071042, 'OrgSize': 27.068756727664155, 'PurchaseInfluence': 27.157337639038392, 'TechList': 31.769151417294584, 'BuyNewTool': 6.923887692859705, 'Country': 1.3578668819519195, 'Currency': 26.742465016146394, 'CompTotal': 45.926399354144245, 'LanguageHaveWorkedWith': 2.2918909221385, 'LanguageWantToWorkWith': 9.502825618945101, 'DatabaseHaveWorkedWith': 17.65899712952996, 'DatabaseWantToWorkWith': 31.701874775744525, 'PlatformHaveWorkedWith': 28.655364190886257, 'PlatformWantToWorkWith': 42.46950125583064, 'WebframeHaveWorkedWith': 24.94393613204162, 'WebframeWantToWorkWith': 36.37760136347327, 'MiscTechHaveWorkedWith': 36.06588625762468, 'MiscTechWantToWorkWith': 47.470398277717976, 'ToolsTechHaveWorkedWith': 12.67043415859347, 'ToolsTechWantToWorkWith': 23.399937208467886, 'NEWCollabToolsHaveWorkedWith': 3.7226408324363116, 'NEWCollabToolsWantToWorkWith': 14.05521169716541, 'OpSysPersonal use': 2.94559562253319, 'OpSysProfessional use': 11.882176175098673, 'OfficeStackAsyncHaveWorkedWith': 22.530947255113023, 'OfficeStackAsyncWantToWorkWith': 39.739190886257624, 'OfficeStackSyncHaveWorkedWith': 6.441738428417654, 'OfficeStackSyncWantToWorkWith': 21.761750986724078, 'AISearchHaveWorkedWith': 36.84068891280947, 'AISearchWantToWorkWith': 48.25304987441694, 'NEWSOSites': 1.3578668819519195, 'SOVisitFreq': 2.2918909221385, 'SOAccount': 1.4935414424111948, 'SOPartFreq': 25.927296376031578, 'SOComm': 1.672945819878005, 'SOAI': 46.33790814495874, 'AISelect': 1.3578668819519195, 'AISent': 31.040321133835665, 'AIAcc': 56.72542160028705, 'AIBen': 31.158055256548263, 'AIToolInterested in Using': 63.24116433440976, 'AIToolCurrently Using': 59.48040007176175, 'TBranch': 26.255830642267668, 'ICorPM': 51.03606027987083, 'WorkExp': 51.13585396483674, 'Knowledge_1': 52.306467527807676, 'Knowledge_2': 53.27637244348762, 'Knowledge_3': 53.132848941514176, 'Knowledge_4': 53.26067456045928, 'Knowledge_5': 53.436715105848585, 'Knowledge_6': 53.44456404736275, 'Knowledge_7': 53.503991747398636, 'Knowledge_8': 53.5746322210262, 'Frequency_1': 53.0005382131324, 'Frequency_2': 52.990446716899896, 'Frequency_3': 53.967079296734845, 'TimeSearching': 52.033997129529965, 'TimeAnswering': 52.20106745604593, 'ProfessionalTech': 53.14966810190168, 'Industry': 58.76614639397201, 'ConvertedCompYearly': 46.15738249013276}\n",
       "\n",
+      "ResponseId : 0.0\n",
       "\n",
+      "MainBranch : 0.0\n",
+      "\n",
+      "Age : 0.0\n",
+      "\n",
+      "Employment : 1.441962683889487\n",
+      "\n",
+      "RemoteWork : 17.238518119842126\n",
+      "\n",
+      "CodingActivities : 17.29009687836383\n",
+      "\n",
+      "EdLevel : 1.3578668819519195\n",
+      "\n",
+      "LearnCode : 1.7054628632938644\n",
+      "\n",
+      "LearnCodeOnline : 21.416397560100467\n",
+      "\n",
+      "LearnCodeCoursesCert : 58.427520631503405\n",
+      "\n",
+      "YearsCode : 1.961114101184069\n",
+      "\n",
+      "YearsCodePro : 25.843200574094006\n",
+      "\n",
+      "DevType : 13.805166846071042\n",
+      "\n",
+      "OrgSize : 27.068756727664155\n",
+      "\n",
+      "PurchaseInfluence : 27.157337639038392\n",
+      "\n",
+      "TechList : 31.769151417294584\n",
+      "\n",
+      "BuyNewTool : 6.923887692859705\n",
+      "\n",
+      "Country : 1.3578668819519195\n",
+      "\n",
+      "Currency : 26.742465016146394\n",
+      "\n",
+      "CompTotal : 45.926399354144245\n",
+      "\n",
+      "LanguageHaveWorkedWith : 2.2918909221385\n",
+      "\n",
+      "LanguageWantToWorkWith : 9.502825618945101\n",
+      "\n",
+      "DatabaseHaveWorkedWith : 17.65899712952996\n",
+      "\n",
+      "DatabaseWantToWorkWith : 31.701874775744525\n",
+      "\n",
+      "PlatformHaveWorkedWith : 28.655364190886257\n",
+      "\n",
+      "PlatformWantToWorkWith : 42.46950125583064\n",
+      "\n",
+      "WebframeHaveWorkedWith : 24.94393613204162\n",
+      "\n",
+      "WebframeWantToWorkWith : 36.37760136347327\n",
+      "\n",
+      "MiscTechHaveWorkedWith : 36.06588625762468\n",
+      "\n",
+      "MiscTechWantToWorkWith : 47.470398277717976\n",
+      "\n",
+      "ToolsTechHaveWorkedWith : 12.67043415859347\n",
+      "\n",
+      "ToolsTechWantToWorkWith : 23.399937208467886\n",
+      "\n",
+      "NEWCollabToolsHaveWorkedWith : 3.7226408324363116\n",
+      "\n",
+      "NEWCollabToolsWantToWorkWith : 14.05521169716541\n",
+      "\n",
+      "OpSysPersonal use : 2.94559562253319\n",
+      "\n",
+      "OpSysProfessional use : 11.882176175098673\n",
+      "\n",
+      "OfficeStackAsyncHaveWorkedWith : 22.530947255113023\n",
+      "\n",
+      "OfficeStackAsyncWantToWorkWith : 39.739190886257624\n",
+      "\n",
+      "OfficeStackSyncHaveWorkedWith : 6.441738428417654\n",
+      "\n",
+      "OfficeStackSyncWantToWorkWith : 21.761750986724078\n",
+      "\n",
+      "AISearchHaveWorkedWith : 36.84068891280947\n",
+      "\n",
+      "AISearchWantToWorkWith : 48.25304987441694\n",
+      "\n",
+      "NEWSOSites : 1.3578668819519195\n",
+      "\n",
+      "SOVisitFreq : 2.2918909221385\n",
+      "\n",
+      "SOAccount : 1.4935414424111948\n",
+      "\n",
+      "SOPartFreq : 25.927296376031578\n",
+      "\n",
+      "SOComm : 1.672945819878005\n",
+      "\n",
+      "SOAI : 46.33790814495874\n",
+      "\n",
+      "AISelect : 1.3578668819519195\n",
+      "\n",
+      "AISent : 31.040321133835665\n",
+      "\n",
+      "AIAcc : 56.72542160028705\n",
+      "\n",
+      "AIBen : 31.158055256548263\n",
+      "\n",
+      "AIToolInterested in Using : 63.24116433440976\n",
+      "\n",
+      "AIToolCurrently Using : 59.48040007176175\n",
+      "\n",
+      "TBranch : 26.255830642267668\n",
+      "\n",
+      "ICorPM : 51.03606027987083\n",
+      "\n",
+      "WorkExp : 51.13585396483674\n",
+      "\n",
+      "Knowledge_1 : 52.306467527807676\n",
+      "\n",
+      "Knowledge_2 : 53.27637244348762\n",
+      "\n",
+      "Knowledge_3 : 53.132848941514176\n",
+      "\n",
+      "Knowledge_4 : 53.26067456045928\n",
+      "\n",
+      "Knowledge_5 : 53.436715105848585\n",
+      "\n",
+      "Knowledge_6 : 53.44456404736275\n",
+      "\n",
+      "Knowledge_7 : 53.503991747398636\n",
+      "\n",
+      "Knowledge_8 : 53.5746322210262\n",
+      "\n",
+      "Frequency_1 : 53.0005382131324\n",
+      "\n",
+      "Frequency_2 : 52.990446716899896\n",
+      "\n",
+      "Frequency_3 : 53.967079296734845\n",
+      "\n",
+      "TimeSearching : 52.033997129529965\n",
+      "\n",
+      "TimeAnswering : 52.20106745604593\n",
+      "\n",
+      "ProfessionalTech : 53.14966810190168\n",
+      "\n",
+      "Industry : 58.76614639397201\n",
+      "\n",
+      "ConvertedCompYearly : 46.15738249013276\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Each column null values\\n\")\n",
+    "for x in work_df.columns:\n",
+    "    print(f\"{x} : {mp[x]}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Average null value percentage in data \n",
       " 29.41821679421581\n",
       "\n",
-      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Average null value percentage in data \\n {average_percentage_null}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 89184 entries, 0 to 89183\n",
       "Data columns (total 73 columns):\n",
@@ -5020,10 +5214,7 @@
     }
    ],
    "source": [
-    "print(f\"Different columns in data\\n {work_df.columns}\\n\\n\")\n",
-    "print(f\"Each column null values\\n {mp}\\n\\n\")\n",
-    "print(f\"Average null value percentage in data \\n {average_percentage_null}\\n\\n\")\n",
-    "print(f\"Data Info\\n {work_df.info()}\\n\\n\")"
+    "print(f\"Data Info\\n {work_df.info()}\")"
    ]
   },
   {
