"getting all the columns where there are >= 50% null values"

--- a/test.ipynb
+++ b/test.ipynb
@@ -5215,6 +5215,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LearnCodeCoursesCert         52108\n",
+       "AIAcc                        50590\n",
+       "AIToolInterested in Using    56401\n",
+       "AIToolCurrently Using        53047\n",
+       "ICorPM                       45516\n",
+       "WorkExp                      45605\n",
+       "Knowledge_1                  46649\n",
+       "Knowledge_2                  47514\n",
+       "Knowledge_3                  47386\n",
+       "Knowledge_4                  47500\n",
+       "Knowledge_5                  47657\n",
+       "Knowledge_6                  47664\n",
+       "Knowledge_7                  47717\n",
+       "Knowledge_8                  47780\n",
+       "Frequency_1                  47268\n",
+       "Frequency_2                  47259\n",
+       "Frequency_3                  48130\n",
+       "TimeSearching                46406\n",
+       "TimeAnswering                46555\n",
+       "ProfessionalTech             47401\n",
+       "Industry                     52410\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_null_df = work_df.loc[:, (work_df.isnull().sum()/work_df.shape[0])*100 >= 50]\n",
+    "most_null_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
