"dopping some values"

--- a/test.ipynb
+++ b/test.ipynb
@@ -5215,13 +5215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "LearnCodeCoursesCert         52108\n",
+       "CompTotal                    40959\n",
+       "MiscTechWantToWorkWith       42336\n",
+       "AISearchWantToWorkWith       43034\n",
+       "SOAI                         41326\n",
        "AIAcc                        50590\n",
        "AIToolInterested in Using    56401\n",
        "AIToolCurrently Using        53047\n",
@@ -5242,16 +5246,17 @@
        "TimeAnswering                46555\n",
        "ProfessionalTech             47401\n",
        "Industry                     52410\n",
+       "ConvertedCompYearly          41165\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "most_null_df = work_df.loc[:, (work_df.isnull().sum()/work_df.shape[0])*100 >= 50]\n",
+    "most_null_df = work_df.loc[:, (work_df.isnull().sum()/work_df.shape[0])*100 >= 45]\n",
     "most_null_df.isnull().sum()"
    ]
   },
