--- a/test.ipynb
+++ b/test.ipynb
@@ -5470,7 +5470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -5491,13 +5491,35 @@
     "# Assuming your DataFrame is named 'df'\n",
     "# Select only the relevant columns\n",
     "relevant_columns = ['CompTotal', 'ConvertedCompYearly']\n",
-    "correlation_matrix = work_df[relevant_columns].corr()\n",
+    "correlation_matrix = new_work_df[relevant_columns].corr()\n",
     "\n",
     "# Plot heatmap\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt=\".2f\", linewidths=0.5)\n",
     "plt.title('Correlation Heatmap between CompTotal and ConvertedCompYearly')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompTotal              0.459264\n",
+       "ConvertedCompYearly    0.461574\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_work_df[relevant_columns].isnull().sum()/new_work_df.shape[0]"
    ]
   },
   {
